# MSD

./: .gitignore  CMakeLists.txt  README.md
cmake/: nlopt.cmake
examples/armadillo/: cmd.txt
examples/bear/: cmd.txt  input-ma.json
examples/dancer/: cmd.txt  input-ma.json
examples/fish/: cmd.txt  input-ma.json
examples/hand/: cmd.txt  input-ma.json
examples/horse/: cmd.txt  input-ma.json
examples/pig/: cmd.txt  input-ma.json
src/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/primitives/: corefinementUtilities.cpp  corefinementUtilities.h  cylinderCorefinement.cpp  cylinderCorefinement.h  primitiveICP.cpp  primitiveICP.h  prismCorefinement.cpp  prismCorefinement.h  sphereCorefinement.cpp  sphereCorefinement.h  sphereICP.cpp  sphereICPSolverBundle.cpp  sphereICPSolverBundle.h  templatePrimitive.cpp  templatePrimitive.h  templateSpheres.cpp  templateSpheres.h
src/libraries/primitives/obsolete/: sphereICP.cpp  sphereICP.h  sphereICPSolverBundle.h
src/libraries/skeletons/: medialSkeletalDiagramOpt.cpp  medialSkeletalDiagramOpt.h  skeletonExact.cpp  skeletonExact.h  skeletonRVD.cpp  skeletonRVD.h
src/libraries/utilities/: CGALTemplateUtilities.h  CGALUtilities.cpp  CGALUtilities.h  geogramUtilities.cpp  geogramUtilities.h  tetgenUtilities.cpp  tetgenUtilities.h
src/tools/: CMakeLists.txt
src/tools/computeMSD/: CMakeLists.txt  computeMSD.cpp
